--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
             name="description"
             content="Personal portfolio of Jose Maria Pahino"
         />
+        <meta name="author" content="Jose Maria Pahino" />
+        <meta
+            name="keywords"
+            content="Jose Maria Pahino, Jose Pahino, Pahino, Leibu, José María Pahino, José Pahino, Pahino Portfolio"
+        />
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
